--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -12,6 +12,23 @@
   </li>
 {%- endif -%}
 
+  
+# test
+{%- if site.social-network-links.rss -%}
+  <li class="list-inline-item">
+    <a href="https://loop.frontiersin.org/people/649624/overview" title="Loop">
+      <span class="fa-stack fa-lg" aria-hidden="true">
+        <i class="fas fa-circle fa-stack-2x"></i>
+        <i class="fas fa-rss fa-stack-1x fa-inverse"></i>
+      </span>
+      <span class="sr-only">Loop</span>
+    </a>
+  </li>
+{%- endif -%}
+ # test end
+  
+  
+
 {%- if site.social-network-links.email -%}
   <li class="list-inline-item">
     <a href="mailto:{{ site.social-network-links.email }}" title="Email me">
