--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -13,7 +13,7 @@
 {%- endif -%}
 
 
-{%- if site.social-network-links.rss -%}
+{%- if site.social-network-links.loop -%}
   <li class="list-inline-item">
     <a href="https://loop.frontiersin.org/people/649624/overview" title="Loop">
       <span class="fa-stack fa-lg" aria-hidden="true">
