--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -246,7 +246,7 @@
     <a href="https://loop.frontiersin.org/people/649624/overview" title="Loop">
       <span class="fa-stack fa-lg" aria-hidden="true">
         <i class="fas fa-circle fa-stack-2x"></i>
-        <i class="ai ai-google-scholar-square ai-3x"></i>
+        <i class="far fa-circle fa-stack-1x fa-inverse"></i>
       </span>
       <span class="sr-only">Loop</span>
     </a>
