--- a/_includes/custom.html
+++ b/_includes/custom.html
@@ -1,3 +1,3 @@
 <!-- start custom head snippets -->
-<link rel="stylesheet" href="/assets/css/academicons.css"/>
+<link rel="stylesheet" href="/assets/css/academicons.min.css"/>
 <!-- end custom head snippets -->
