--- a/_includes/head.html
+++ b/_includes/head.html
@@ -116,5 +116,7 @@
   <!-- Staticman -->
   <link rel="stylesheet" href="{{ "/assets/css/staticman.css" | relative_url }}">
   {% endif %}
+  
+  <link rel="stylesheet" href="/assets/css/academicons.min.css"/>
 
 </head>
