--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -244,7 +244,10 @@
  {%- if site.social-network-links.loop -%}
   <li class="list-inline-item">
     <a href="https://loop.frontiersin.org/people/649624/overview" title="Loop">
-        <i class="ai ai-orcid-square ai-stack-2x"></i>
+      <span class="fa-stack fa-lg" aria-hidden="true">
+        <i class="fas fa-circle fa-stack-2x"></i>
+        <i class="far fa-circle fa-stack-1x fa-inverse"></i>
+      </span>
       <span class="sr-only">Loop</span>
     </a>
   </li>
