--- a/_includes/head.html
+++ b/_includes/head.html
@@ -117,5 +117,6 @@
   <link rel="stylesheet" href="{{ "/assets/css/staticman.css" | relative_url }}">
   {% endif %}
 
-
+  <link rel="stylesheet" href="/assets/css/academicons.min.css"/>
+  
 </head>
