--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -244,7 +244,7 @@
  {%- if site.social-network-links.loop -%}
   <li class="list-inline-item">
     <a href="https://loop.frontiersin.org/people/649624/overview" title="Loop">
-        <i class="ai ai-orcid-square ai-square ai-3x"></i>
+        <i class="ai ai-orcid-square ai-3x"></i>
       <span class="sr-only">Loop</span>
     </a>
   </li>
