--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -59,7 +59,7 @@
     </a>
   </li>
 {%- endif -%}
-  
+
 {%- if site.social-network-links.github -%}
   <li class="list-inline-item">
     <a href="https://github.com/{{ site.social-network-links.github }}" title="GitHub">
@@ -239,12 +239,12 @@
     </a>
   </li>
 {%- endif -%}
-  
-  
+
+
  {%- if site.social-network-links.loop -%}
   <li class="list-inline-item">
     <a href="https://loop.frontiersin.org/people/649624/overview" title="Loop">
-        <i class="ai ai-orcid-square ai-3x"></i>
+        <i class="ai ai-orcid ai-3x"></i>
       <span class="sr-only">Loop</span>
     </a>
   </li>
