--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -252,5 +252,18 @@
     </a>
   </li>
 {%- endif -%}
+  
+  %- if site.social-network-links.google_scholar -%}
+  <li class="list-inline-item">
+    <a href="https://scholar.google.com/citations?user=-5BC9nwAAAAJ&hl=de" title="Loop">
+      <span class="fa-stack fa-lg" aria-hidden="true">
+        <i class="fas fa-user-graduate fa-stack-2x"></i>
+        <i class="far fa-user-graduate fa-stack-1x fa-inverse"></i>
+        </span>
+      <span class="sr-only">Loop</span>
+    </a>
+  </li>
+{%- endif -%}
+  
 
 </ul>
