--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -253,7 +253,7 @@
   </li>
 {%- endif -%}
   
-  %- if site.social-network-links.google_scholar -%}
+{%- if site.social-network-links.google_scholar -%}
   <li class="list-inline-item">
     <a href="https://scholar.google.com/citations?user=-5BC9nwAAAAJ&hl=de" title="Loop">
       <span class="fa-stack fa-lg" aria-hidden="true">
