--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -258,7 +258,7 @@
     <a href="https://scholar.google.com/citations?user=-5BC9nwAAAAJ&hl=de" title="Loop">
       <span class="fa-stack fa-lg" aria-hidden="true">
          <i class="fas fa-circle fa-stack-2x"></i>
-        <i class="fab fa-user-graduate fa-stack-1x fa-inverse"></i>
+        <i class="fas fa-user-graduate fa-stack-1x fa-inverse"></i>
         </span>
       <span class="sr-only">Loop</span>
     </a>
