--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -122,7 +122,7 @@
   
 {%- if site.social-network-links.google_scholar -%}
   <li class="list-inline-item">
-    <a href="https://scholar.google.com/citations?user=-5BC9nwAAAAJ&hl=de" title="Loop">
+    <a href="https://scholar.google.com/citations?user=-5BC9nwAAAAJ&hl=de" title="Scholar">
       <span class="fa-stack fa-lg" aria-hidden="true">
          <i class="fas fa-circle fa-stack-2x"></i>
         <i class="fas fa-user-graduate fa-stack-1x fa-inverse"></i>
