--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -131,6 +131,19 @@
     </a>
   </li>
 {%- endif -%}
+
+{%- if site.social-network-links.orcid -%}
+  <li class="list-inline-item">
+    <a href="https://orcid.org/0000-0003-1564-0433" title="ORCID">
+      <span class="fa-stack fa-lg" aria-hidden="true">
+         <i class="fas fa-circle fa-stack-2x"></i>
+        <i class="fab fa-orcid fa-stack-1x fa-inverse"></i>
+        </span>
+      <span class="sr-only">ORCID</span>
+    </a>
+  </li>
+{%- endif -%}
+  
   
 
 </ul>
