--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,6 +15,7 @@
       {% endif %}
       {{ site.time | date: '%Y' }}
 
+     <p>Impressum & Datenschutz</p>      
       {% if site.url-pretty %}
         &nbsp;&bull;&nbsp;
         <a href="{{ '' | absolute_url }}">{{ site.url-pretty }}</a>
