--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,8 @@
       {% endif %}
       {{ site.time | date: '%Y' }}
 
-     <p>Impressum & Datenschutz</p>      
+     <p class="theme-by text-muted">
+         Impressum & Datenschutz</p>      
       {% if site.url-pretty %}
         &nbsp;&bull;&nbsp;
         <a href="{{ '' | absolute_url }}">{{ site.url-pretty }}</a>
